added item group "sticks"

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.tutorial.stick": "Stick"
+  "item.tutorial.stick": "Stick",
+  "item.tutorial.diamond_stick": "Diamond Stick",
+
+  "itemGroup.tutorialmod.stick": "Stick Tutorial Tab"
 }
