changed sticks to discs, added the items and the new textures

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-  "item.tutorial.stick": "Stick",
-  "item.tutorial.diamond_stick": "Diamond Stick",
+  "item.tutorial.aya_disc": "disc_69",
+  "item.tutorial.aya_disc2": "disc_420",
 
-  "itemGroup.tutorialmod.stick": "Stick Tutorial Tab"
+  "itemGroup.tutorialmod.stick": "Disc Tab"
 }
