added two more music discs

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -3,6 +3,10 @@
   "item.tutorialmod.congrats_music_disc.desc": "Congratulations - Mac Miller",
   "item.tutorialmod.here_music_disc": "Disc 420",
   "item.tutorialmod.here_music_disc.desc": "Here, There And Everywhere - The Beatles",
+  "item.tutorialmod.sasageyo_music_disc": "Sasageyo",
+  "item.tutorialmod.sasageyo_music_disc.desc": "Sasageyo, Shinzo wo Sasageyo",
+  "item.tutorialmod.aot_music_disc": "YEAGER!",
+  "item.tutorialmod.aot_music_disc.desc": "idk what to write here just listen to the song",
 
   "itemGroup.tutorialmod.discs": "Disc Tab"
 }
