added sadness and sorrow

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -7,6 +7,8 @@
   "item.tutorialmod.sasageyo_music_disc.desc": "Sasageyo, Shinzo wo Sasageyo",
   "item.tutorialmod.aot_music_disc": "YEAGER!",
   "item.tutorialmod.aot_music_disc.desc": "idk what to write here just listen to the song",
+  "item.tutorialmod.sadness_and_sorrow_music_disc": "Disc 106",
+  "item.tutorialmod.sadness_and_sorrow_music_disc.desc": "Sadness and Sorrow - naruto",
 
   "itemGroup.tutorialmod.discs": "Disc Tab"
 }
