added rei's song

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -9,6 +9,8 @@
   "item.tutorialmod.aot_music_disc.desc": "idk what to write here just listen to the song",
   "item.tutorialmod.sadness_and_sorrow_music_disc": "Disc 106",
   "item.tutorialmod.sadness_and_sorrow_music_disc.desc": "Sadness and Sorrow - naruto",
+  "item.tutorialmod.rei_music_disc": "Dance",
+  "item.tutorialmod.rei_music_disc.desc": "FUCK OFF",
 
   "itemGroup.tutorialmod.discs": "Disc Tab"
 }
